--- a/src/_Position/_Row/Row.css
+++ b/src/_Position/_Row/Row.css
@@ -1,7 +1,14 @@
 .row{
-    display: flex;
-    flex: 0 0 100%;
-    /* box-shadow:10px 0px 5px rgb(255, 159, 69) inset; */
-    box-sizing: border-box;
-    border: solid #888888 10px;
+    display: -ms-flexbox;   /* 混合版本语法: IE 10 */   
+    display: -moz-box;      /* 老版本语法: Firefox (buggy) */
+    display: -webkit-box;   /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
+    display: flex;          /* 新版本语法: Opera 12.1, Firefox 22+ */
+    display: -webkit-flex;  /* 新版本语法: Chrome 21+ */
+
+    -ms-flex:           0 0 100%;    /* IE 10 */  
+    -moz-box-flex:      0 0 100%;    /* OLD - Firefox 19- */           
+    -webkit-box-flex:   0 0 100%;    /* OLD - iOS 6-, Safari 3.1-6 */  
+    flex:               0 0 100%;    /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    -webkit-flex:       0 0 100%;    /* Chrome */  
+    align-items: stretch;
 }
